# theoraplayer

./: .gitignore  CMakeLists.txt  INSTALL.MacOSX  LICENSE  Makefile.am  Theora Player (Mac).plist  TheoraExport.h  fix-nativeline.sh  libtheoraplayer.cbp  libtheoraplayer.sln  libtheoraplayer.vcproj  libtheoraplayer.workspace  libtheoraplayer_2012.sln  libtheoraplayer_codelite.project  libtheoraplayer_codelite.workspace  libtheoraplayer_vs2012.sln  libtheoraplayer_vs2013.sln  libtheoraplayer_vs2015.sln
android-studio/demos/demo_simple/: CMakeLists.txt  build.gradle
android-studio/demos/dummy/: CMakeLists.txt  build.gradle
ogg/android-studio/lib/: CMakeLists.txt
src/: Makefile.am  TheoraAsync.cpp  TheoraAudioInterface.cpp  TheoraDLLmain.cpp  TheoraDataSource.cpp  TheoraException.cpp  TheoraFrameQueue.cpp  TheoraTimer.cpp  TheoraUtil.cpp  TheoraVideoClip.cpp  TheoraVideoFrame.cpp  TheoraVideoManager.cpp  TheoraWorkerThread.cpp
theora/android-studio/lib/: CMakeLists.txt  build.gradle
theora/android-studio/lib-hltypes/: CMakeLists.txt  build.gradle
theoraplayer/android-studio/lib/: CMakeLists.txt  build.gradle
theoraplayer/android-studio/lib-hltypes/: CMakeLists.txt  build.gradle
tremor/android-studio/lib/: CMakeLists.txt  build.gradle
trunk/: CMakeLists.txt  INSTALL.MacOSX  LICENSE  Makefile.am  TheoraExport.h  configure.ac  libtheoraplayer.cbp  libtheoraplayer.sln  libtheoraplayer.vcproj  libtheoraplayer.workspace  libtheoraplayer_2008.sln  libtheoraplayer_2012.sln  libtheoraplayer_codelite.project  libtheoraplayer_codelite.workspace
trunk/demos/: INSTALL.MacOSX  INSTALL.Posix  Makefile  ObjModel.cpp  ObjModel.h  OpenAL_AudioInterface.cpp  OpenAL_AudioInterface.h  demo_basecode.h  objcUtil.mm  tga.cpp
trunk/demos/av_player/: Makefile  av_player.cbp  av_player.cpp  av_player.project  av_player.vcproj
trunk/demos/av_player/msvc9/: av_player.vcproj
trunk/demos/basecode/glut/: glutBasecode.cpp
trunk/demos/basecode/ios/: AppDelegate.h  Info.plist  ViewController.mm
trunk/demos/basecode/util/: objcUtil.h  objcUtil.mm  util.cpp  util.h
trunk/demos/composite_animation/: composite_animation.cpp
trunk/demos/composite_animation/msvc10/: composite_animation.vcxproj
trunk/demos/composite_animation/msvc11/: composite_animation.vcxproj
trunk/demos/composite_animation/msvc9/: composite_animation.vcproj
trunk/demos/environment_mapping/: environment_mapping.cpp
trunk/demos/glut_player/: Makefile  glut_player.cbp  glut_player.cpp  glut_player.project  glut_player.vcproj
trunk/demos/glut_player/msvc9/: glut_player.vcproj
trunk/demos/lightmap_demo/: lightmap_demo.cpp
trunk/demos/lightmap_demo/msvc9/: lightmap_demo.vcproj
trunk/demos/media/: copyright.txt
trunk/demos/media/lighting/: camera.txt  diffuse_map.tga
trunk/demos/media/locv/: locv_birds.tga  locv_bush.tga  locv_clouds.tga
trunk/demos/media/parallax/: parallax_mapping.frag  per_pixel_lighting.frag
trunk/demos/media/tv_room/: room.tga  table.tga
trunk/demos/multiple_videos/: multiple_videos.cbp  multiple_videos.cpp  multiple_videos.project  multiple_videos.vcproj
trunk/demos/multiple_videos/gcc/: multiple_videos.project
trunk/demos/multiple_videos/msvc9/: multiple_videos.vcproj
trunk/demos/parallax_mapping/: parallax_mapping.cpp
trunk/demos/seek_test/: seek_test.cpp
trunk/demos/seek_test/msvc9/: seek_test.vcproj
trunk/demos/sprite_animation/: Makefile  sprite_animation.cbp  sprite_animation.cpp  sprite_animation.project  sprite_animation.vcproj
trunk/demos/sprite_animation/msvc9/: sprite_animation.vcproj
trunk/demos/tv_room/: Makefile  tv_room.cbp  tv_room.cpp  tv_room.project  tv_room.vcproj
trunk/demos/tv_room/gcc/: tv_room.project
trunk/demos/tv_room/msvc9/: tv_room.vcproj
trunk/demos/video_lighting/: video_lighting.cpp
trunk/demos/video_lighting/msvc9/: video_lighting.vcproj
trunk/include/: Makefile.am  TheoraAsync.h  TheoraAudioInterface.h  TheoraDataSource.h  TheoraException.h  TheoraExport.h  TheoraFrameQueue.h  TheoraMuteAudioInterface.h  TheoraPlayer.h  TheoraTimer.h  TheoraUtil.h  TheoraVideoClip.h  TheoraVideoFrame.h  TheoraVideoManager.h  TheoraWorkerThread.h
trunk/include/theoraplayer/: TheoraAudioInterface.h  TheoraException.h  TheoraExport.h  TheoraFrameQueue.h  TheoraPlayer.h  TheoraTimer.h  TheoraVideoClip.h  TheoraVideoFrame.h  TheoraVideoManager.h
trunk/ogg/macosx/Ogg.xcodeproj/: project.pbxproj
trunk/ogg/win32/VS2008/: libogg_dynamic.vcproj
trunk/ogg/win32/VS2010/: libogg_dynamic.vcxproj
trunk/projects/msvc9/: libtheoraplayer.sln  libtheoraplayer.vcproj
trunk/scripts/: api.doxygen  doxygen_mainpage.h  logo.xcf
trunk/src/: TheoraAsync.cpp  TheoraAudioInterface.cpp  TheoraDataSource.cpp  TheoraException.cpp  TheoraFrameQueue.cpp  TheoraMuteAudioInterface.cpp  TheoraTimer.cpp  TheoraUtil.cpp  TheoraVideoClip.cpp  TheoraVideoFrame.cpp  TheoraVideoManager.cpp  TheoraWorkerThread.cpp
trunk/theoraplayer/: Info.plist  fileproperties.rc  libtheoraplayer.vcproj  libtheoraplayer_2008.vcproj  libtheoraplayer_2010.vcxproj  libtheoraplayer_2010.vcxproj.filters  libtheoraplayer_2012.vcxproj  libtheoraplayer_2012.vcxproj.filters  libtheoraplayer_WinRT.vcxproj
trunk/theoraplayer/src/: TheoraAsync.cpp  TheoraAudioInterface.cpp  TheoraAudioPacketQueue.cpp  TheoraDataSource.cpp  TheoraException.cpp  TheoraFrameQueue.cpp  TheoraTimer.cpp  TheoraUtil.cpp  TheoraVideoClip.cpp  TheoraVideoFrame.cpp  TheoraVideoManager.cpp  TheoraWorkerThread.cpp
trunk/theoraplayer/theoraplayer.xcodeproj/: project.pbxproj
trunk/theoraplayer_workspace.xcodeproj/: project.pbxproj  workspace.plist
trunk/tremor/: framing.c  info.c  libtheoraplayer-readme.txt  libtremor.vcxproj  libtremor.vcxproj.filters  libtremor_2010.sln  misc.c
trunk/tremor/Tremor.xcodeproj/: project.pbxproj
trunk/tremor/xcconfig/: iOS.xcconfig
trunk/vorbis/macosx/: Info.plist
trunk/wrappers/aprilvideo/: libaprilvideo.vcproj  libaprilvideo_2012.vcxproj  libaprilvideo_2012.vcxproj.filters  libaprilvideo_WinRT.vcxproj  libaprilvideo_WinRT.vcxproj.filters
trunk/xcconfig/: Mac.xcconfig
(+1028 files in other folders)
